
Add summary of changes for each release. Use ISO dates. Reference
GitHub issues numbers and PR numbers.


2021-xx-xx    0.7.1
orbeckst

Fixes

* restrict alchemlyb to <0.5.0 for Python 2 (otherwise the installation fails
  due to an unsatisfiable pandas dependency) (#180)
* fix failure of mdpow-solvation script "AttributeError: 'AttributeDict' object
  has no attribute 'Gibbs'" (#180)


2021-08-02    0.7.0
orbeckst, VOD555, ALescoulie

Changes

* renamed package to MDPOW
* support Python 3.7 -- 3.9 on Linux and macOS (#84)
* tested with GROMACS 4.6.5, 2018.6, 2020.6, 2021.1 (PR #159, #164)
* removed all generated docs from package
* config parser MERGES user runinput.yml with the package defaults
  (#8)
* Configuration setting mdrun.maxthreads now also applies to energy
  minimization with mdpow-equilibrium.py/mdpow.run() (#119)
* Default plot option is now "none" for the mdpow-* scripts (PR #142)
* Default estimator for mdpow analysis scripts is now alchemlyb MBAR
  (#139, PR #142)
* mdpow analysis scripts now default to statistical inefficiency
  calculation (--SI) and stride=1 (#139, PR #142)
* updated bundled CHARMM/CGENFF with charmm36-mar2019 (previously was
  charmm36-jul2017)
* removed deprecated -DFLEXIBLE grompp preprocessor flag from
  em_opl.mdp template file
* updated MDP templates (PR #155):
  - add files for AMBER (same as OPLS) and CHARMM for em, NPT, and bar (FEP)
    stages
  - NOTE: explicitly set "cutoff-scheme = verlet" in all MDP files;
    for GROMACS 4.6.5 FEP will fail with a FATAL ERROR "The Verlet cut-off scheme
    does not (yet) support free-energy calculations with perturbed
    atoms, only perturbed interactions." so you need to set the
    cutoff-scheme to the value "group".
  - disable energy group calculation to allow running on GPUs with
    modern GROMACS versions (such as 2021)
  - added comments regarding GROMACS bug
    https://gitlab.com/gromacs/gromacs/-/issues/3403 that requires